# OpenContextScitool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/bundle/: caveat-logout-does-not-revoke.md  caveat-token-ttl-conflict.md  env-vars.md  index.md  log.md  rotate-signing-key.md  session-token.md  token-ttl-api.md  token-ttl-ops.md
okf_ctx/: dashboard.py  indexer.py  ingest-context.md  ingest.py  init.py  report.py  schema.sql  serve_dash.py  server.py
tests/: test_okf.py
