[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-ctx"
version = "0.1.0"
description = "Context handler for LLMs over an Open Knowledge Format bundle: keyword index, MCP server, and usage telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aminhzdev" }]
keywords = ["okf", "mcp", "llm", "retrieval", "knowledge", "documentation"]

# Core install stays tiny on purpose: indexing and search need nothing but a
# YAML parser. The MCP server's dependency tree (pydantic, starlette, uvicorn,
# httpx, ...) is ~28 packages, so it lives behind an extra.
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
server = ["mcp>=1.0"]

[project.scripts]
okf = "okf_ctx.indexer:main"
okf-serve = "okf_ctx.server:main"

[tool.setuptools]
packages = ["okf_ctx"]

# schema.sql is read at runtime via Path(__file__).parent — without this it is
# left out of the wheel and every command dies on the first connect().
[tool.setuptools.package-data]
okf_ctx = ["*.sql", "*.md"]
