[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-ctx"
version = "0.1.1"
description = "Context handler for LLMs over an Open Knowledge Format bundle: keyword index, MCP server, and usage telemetry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aminhzdev" }]
keywords = ["okf", "mcp", "llm", "retrieval", "knowledge", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]
# Core install stays tiny on purpose: indexing and search need nothing but a
# YAML parser. The MCP server's dependency tree (pydantic, starlette, uvicorn,
# httpx, ...) is ~28 packages, so it lives behind an extra.
dependencies = ["pyyaml>=6.0"]

# --- sub-tables must come AFTER all the flat keys above ---

[project.optional-dependencies]
server = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/aminHZDEV/OpenContextScitool"
Repository = "https://github.com/aminHZDEV/OpenContextScitool"
Issues = "https://github.com/aminHZDEV/OpenContextScitool/issues"

[project.scripts]
okf = "okf_ctx.indexer:main"
okf-serve = "okf_ctx.server:main"

[tool.setuptools]
packages = ["okf_ctx"]

# schema.sql is read at runtime via Path(__file__).parent — without this it is
# left out of the wheel and every command dies on the first connect().
[tool.setuptools.package-data]
okf_ctx = ["*.sql", "*.md"]
